--- a/Views/Produce/Delete.cshtml
+++ b/Views/Produce/Delete.cshtml
@@ -41,6 +41,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Producer)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Producer.ProducerName)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
