only oine user now

--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Produce.Area)
+                @Html.DisplayFor(modelItem => item.Produce.ProducerEmail)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
