--- a/Views/Customer/Delete.cshtml
+++ b/Views/Customer/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Produce)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produce.Area)
+            @Html.DisplayFor(model => model.Produce.ProducerEmail)
         </dd>
     </dl>
     
