--- a/Views/Produce/Details.cshtml
+++ b/Views/Produce/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProduceName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProduceName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
@@ -23,10 +29,10 @@
             @Html.DisplayFor(model => model.PickupPlace)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Area)
+            @Html.DisplayNameFor(model => model.ProducerEmail)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Area)
+            @Html.DisplayFor(model => model.ProducerEmail)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Theme)
@@ -44,7 +50,7 @@
             @Html.DisplayNameFor(model => model.Producer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Producer.ProducerName)
+            @Html.DisplayFor(model => model.Producer.ProducerEmail)
         </dd>
     </dl>
 </div>
