--- a/Views/Produce/Edit.cshtml
+++ b/Views/Produce/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProduceId" />
             <div class="form-group">
+                <label asp-for="ProduceName" class="control-label"></label>
+                <input asp-for="ProduceName" class="form-control" />
+                <span asp-validation-for="ProduceName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
@@ -24,9 +29,9 @@
                 <span asp-validation-for="PickupPlace" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Area" class="control-label"></label>
-                <input asp-for="Area" class="form-control" />
-                <span asp-validation-for="Area" class="text-danger"></span>
+                <label asp-for="ProducerEmail" class="control-label"></label>
+                <input asp-for="ProducerEmail" class="form-control" />
+                <span asp-validation-for="ProducerEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Theme" class="control-label"></label>
