--- a/Views/Producer/Create.cshtml
+++ b/Views/Producer/Create.cshtml
@@ -23,9 +23,7 @@
                 <span asp-validation-for="ProducerNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProducerEmail" class="control-label"></label>
-                <input asp-for="ProducerEmail" class="form-control" />
-                <span asp-validation-for="ProducerEmail" class="text-danger"></span>
+                <input type="hidden" asp-for="ProducerEmail" value=@User.Identity?.Name class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
