--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produce"
-                                asp-action="Index">Produce</a>
+                                asp-action="Index" asp-route-user="@User.Identity?.Name">Produce</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Producer"
-                                asp-action="Index">Producers</a>
+                                asp-action="Index" asp-route-user="@User.Identity?.Name">Producers</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
