--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-route-user="@User.Identity?.Name">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CustomerName" class="control-label"></label>
@@ -22,11 +22,7 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="ProduceId" class="control-label"></label>
                 <select asp-for="ProduceId" class ="form-control" asp-items="ViewBag.ProduceId"></select>
