--- a/Views/Produce/Delete.cshtml
+++ b/Views/Produce/Delete.cshtml
@@ -48,6 +48,12 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ImgName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ImgName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Producer)
         </dt>
         <dd class = "col-sm-10">
