--- a/Views/Produce/Edit.cshtml
+++ b/Views/Produce/Edit.cshtml
@@ -44,6 +44,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ImgName" class="control-label"></label>
+                <input asp-for="ImgName" class="form-control" />
+                <span asp-validation-for="ImgName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProducerId" class="control-label"></label>
                 <select asp-for="ProducerId" class="form-control" asp-items="ViewBag.ProducerId"></select>
                 <span asp-validation-for="ProducerId" class="text-danger"></span>
