--- a/Views/Producer/Create.cshtml
+++ b/Views/Producer/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" asp-route-user="@User.Identity?.Name">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProducerName" class="control-label"></label>
@@ -23,7 +23,9 @@
                 <span asp-validation-for="ProducerNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="hidden" asp-for="ProducerEmail" value=@User.Identity?.Name class="form-control" />
+                <label asp-for="ProducerEmail" class="control-label"></label>
+                <input asp-for="ProducerEmail" class="form-control" />
+                <span asp-validation-for="ProducerEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
