search functions and one admin works again

--- a/Views/Produce/Index.cshtml
+++ b/Views/Produce/Index.cshtml
@@ -2,16 +2,27 @@
 
 @{
     ViewData["Title"] = "Index";
+
 }
 
 <h1>Index</h1>
+@* This is the search input form. *@
+<form asp-controller="Produce" asp-action="Index" asp-route-user="@User.Identity?.Name">
+    <p>
+        Search by produce name: <input type="text" name="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" asp-route-user="@User.Identity?.Name">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ImgName)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProduceName)
             </th>
@@ -21,18 +32,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.PickupPlace)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProducerEmail)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Theme)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImgName)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Producer)
             </th>
@@ -40,43 +47,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProduceName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PickupPlace)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProducerEmail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Theme)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImgName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Producer.ProducerEmail)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProduceId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProduceId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProduceId">Delete</a>
-            </td>
-        </tr>
-        @if(item.ImgName !=null){
-            
-            
-            <img src="https://localhost:7247/img/@item.ImgName" alt=""/>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @if (item.ImgName != null)
+                    {
+                        <img src="https://localhost:7247/img/@item.ImgName" alt=" Image of @item.ProduceName" />
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProduceName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PickupPlace)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Theme)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Producer)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ProduceId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ProduceId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ProduceId">Delete</a>
+                </td>
+            </tr>
+
         }
-}
     </tbody>
 </table>
