--- a/Views/Produce/Create.cshtml
+++ b/Views/Produce/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create" enctype="multipart/form-data"  asp-route-user="@User.Identity?.Name">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProduceName" class="control-label"></label>
@@ -28,9 +28,7 @@
                 <span asp-validation-for="PickupPlace" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProducerEmail" class="control-label"></label>
-                <input asp-for="ProducerEmail" class="form-control" />
-                <span asp-validation-for="ProducerEmail" class="text-danger"></span>
+                <input type="hidden" asp-for="ProducerEmail" value=@User.Identity?.Name class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Theme" class="control-label"></label>
