--- a/Views/Produce/Create.cshtml
+++ b/Views/Produce/Create.cshtml
@@ -32,7 +32,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Theme" class="control-label"></label>
-                <input asp-for="Theme" class="form-control" />
+                <select asp-for="Theme" class ="form-control"> 
+                    
+                    <option>Frukt och grönt</option>
+                    <option>Säd och gryn</option>
+                    <option>Mejeri</option>
+                    <option>Kött och chark</option>
+                    <option>Plantor och växter</option>
+                    <option>Sylt, saft och marmelad</option>
+                    </select>
                 <span asp-validation-for="Theme" class="text-danger"></span>
             </div>
             <div class="form-group">
