changed to english options

--- a/Views/Produce/Create.cshtml
+++ b/Views/Produce/Create.cshtml
@@ -34,12 +34,11 @@
                 <label asp-for="Theme" class="control-label"></label>
                 <select asp-for="Theme" class ="form-control"> 
                     
-                    <option>Frukt och grönt</option>
-                    <option>Säd och gryn</option>
-                    <option>Mejeri</option>
-                    <option>Kött och chark</option>
-                    <option>Plantor och växter</option>
-                    <option>Sylt, saft och marmelad</option>
+                    <option>Fruit and vegetables</option>
+                    <option>Dairy</option>
+                    <option>Meat</option>
+                    <option>Plants and seed</option>
+                    <option>Bread and bakery</option>
                     </select>
                 <span asp-validation-for="Theme" class="text-danger"></span>
             </div>
