changed to english form

--- a/Views/Produce/Create.cshtml
+++ b/Views/Produce/Create.cshtml
@@ -35,7 +35,7 @@
                 <select asp-for="Theme" class ="form-control"> 
                     
                     <option>Fruit and vegetables</option>
-                    <option>Dairy</option>
+                    <option>Eggs and dairy</option>
                     <option>Meat</option>
                     <option>Plants and seed</option>
                     <option>Bread and bakery</option>
